kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: portfolio
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio
      tier: backend
  template:
    metadata:
      labels:
        app: portfolio
        tier: backend
    spec:
      imagePullSecrets:
        - name: ghcr-pull
      containers:
        - name: backend
          # Tag is rewritten by CI to the short git SHA after each build
          image: ghcr.io/mpratyush54/portfolio-backend:ac258a8
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  labels:
    app: portfolio
    tier: backend
spec:
  selector:
    app: portfolio
    tier: backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
